# PrismQ.IdeaInspiration.Model

./: .env.example  .gitignore  .gitmodules  CHANGES_v0.2.0.md  CHANGES_v0.2.1.md  CONFIGURATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.2.1.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  Setup-IdeaInspiration-into-db-createtable.bat  config_manager.py  example.py  example_config_usage.py  module.json  pyproject.toml  requirements.txt  scoring_demo.py  setup-idea-inspiration-db.sh  setup.py  setup_db.bat  setup_db.sh  sqlite_demo.py
.github/: copilot-instructions.md
mod/: README.md
prismq/: __init__.py
prismq/idea/: __init__.py
prismq/idea/model/: __init__.py  idea_inspiration.py
prismq/model/: __init__.py  idea_inspiration.py
scripts/: SUBMODULE_CONVERTER_README.md  format.bat  lint.bat  quickstart.bat  setup.bat  submodule-converter.bat  submodule-converter.sh  test.bat
tests/: __init__.py  test_config_manager.py  test_idea_inspiration.py  test_model.py
